# admissions_conversation_engine

./: .gitignore  Dockerfile  Dockerfile-langsmith  Dockerfile.dev  Makefile  README.md  api.py  docker-compose-dev.yml  docker-compose-langsmith.yml  docker-compose.yml  env-example  langgraph.json  pyproject.toml
alembic/: env.py
alembic/versions/: e88610257584_create_vectorstore_view.py
src/admissions_conversation_engine/application/: capture_user_input_node.py  case_router_node.py  fasttext_language_detector_node.py  generate_assistant_reply_node.py  guardrail_node.py  llm_language_detector_node.py  react_node.py  setup_chat_node.py  simple_llm_node.py  tool_node.py
src/admissions_conversation_engine/domain/: agent_state.py  tenant_config.py
src/admissions_conversation_engine/domain/prompts/: case_low_scoring_prompt.py  case_max_retries_prompt.py  case_off_hours_prompt.py  case_overflow_prompt.py  guardrail_prompt.py  language_detector_prompt.py  react_prompt.py  render_case_low_scoring_prompt.py  render_case_max_retries_prompt.py  render_case_off_hours_prompt.py  render_case_overflow_prompt.py  (+2 more)
src/admissions_conversation_engine/entrypoints/: api.py  cli.py  graph.py
src/admissions_conversation_engine/infrastructure/: agent_builder.py  langfuse_factory.py  llm_factory.py  postgres_checkpointer_manager.py  prompt_provider.py  rag_postgres_tool.py
tests/application/: test_case_router_node.py  test_fasttext_language_detector_node.py  test_guardrail_node.py  test_llm_language_detector_node.py  test_react_node.py  test_setup_chat_node.py  test_simple_llm_node.py  test_tool_node.py
tests/domain/prompts/: test_prompt_renderers.py
tests/infrastructure/: test_agent_builder.py  test_langfuse_factory.py  test_llm_factory.py  test_postgres_checkpointer_manager.py  test_prompt_provider.py  test_rag_postgres_tool.py
tests/infrastructure/config/: test_config_bootstrap.py  test_env_config_source.py  test_merged_config_source.py  test_vault_config_source.py
(+13 files in other folders)
